# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## Unreleased
### Fixed
- [FRONTEND] Allow skipping unresponsive nodes during HAProxy test_conf


## [2.14.2] - Unreleased
### Changed
- [API_PARSER] [VECTRA] Store current access token to avoid re-generating it every time
- [DEPENDENCIES] Python dependencies upgrade
  - aiohttp 3.9.1 -> 3.9.3
  - attrs 23.1.0 -> 23.2.0
  - beautifulsoup4 4.12.2 -> 4.12.3
  - boto3 1.33.2 -> 1.34.32
  - botocore 1.33.2 -> 1.34.32
  - bs4 0.0.1 -> removed
  - cryptography 41.0.7 -> 42.0.2
  - django 4.2.7 -> 4.2.9
  - djongo 1.3.6_2 -> 1.3.6.post3
  - frozenlist 1.4.0 -> 1.4.1
  - google-api-core 2.14.0 -> 2.16.1
  - google-api-python-client 2.108.0 -> 2.116.0
  - google-auth 2.23.4 -> 2.27.0
  - google-auth-httplib2 0.1.1 -> 0.2.0
  - googleapis-common-protos 1.61.0 -> 1.62.0
  - jinja2 3.1.2 -> 3.1.3
  - markupsafe 2.1.3 -> 2.1.4
  - maxminddb 2.5.1 -> 2.5.2
  - meraki 1.39.0 -> 1.42.0
  - netaddr 0.9.0 -> 0.10.1
  - pillow 10.1.0 -> 10.2.0
  - protobuf 4.25.1 -> 4.25.2
  - pyopenssl 23.3.0 -> 24.0.0
  - s3transfer 0.8.1 -> 0.10.0
  - typing-extensions 4.8.0 -> 4.9.0
  - yarl 1.9.3 -> 1.9.4
  - setuptools 69.0.2 -> 69.0.3
### Fixed
- [API_PARSER] [CSC_DOMAINMANAGER] Correct missing import...
- [API_PARSER] [RETARUS] Fix update lock to prevent multiprocess
- [API_PARSER] [SENTINEL_ONE_MOBILE] Fix try..except raises
- [API_PARSER] [FORCEPOINT] Fix update lock to prevent multiprocess
- [API_PARSER] [FORCEPOINT] Use a safer alternative to XML decoding
- [WORKFLOW] Trigger build_conf on various changes
- [GUI] [NODES] Wrong state of mongo replica when a node is down
- [GUI] [NODES] Correctly print result when stepping down a Mongodb node