@@ -1,0 +1,43 @@
+# Generated by Django 4.2.9 on 2024-02-13 13:35
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('services', '0065_frontend_vectra_access_token_and_more'),
+    ]
+
+    operations = [
+        migrations.AddField(
+            model_name='frontend',
+            name='redis_stream_acknowledge',
+            field=models.BooleanField(default=True, help_text='Acknowledge processed entries to Redis', verbose_name='Acknowledge processed entries'),
+        ),
+        migrations.AddField(
+            model_name='frontend',
+            name='redis_stream_consumerGroup',
+            field=models.TextField(blank=True, default='', help_text='Redis stream consumer group', verbose_name='Redis stream consumer group'),
+        ),
+        migrations.AddField(
+            model_name='frontend',
+            name='redis_stream_consumerName',
+            field=models.TextField(blank=True, default='', help_text='Redis stream consumer name', verbose_name='Redis stream consumer name'),
+        ),
+        migrations.AddField(
+            model_name='frontend',
+            name='redis_stream_reclaim_timeout',
+            field=models.PositiveIntegerField(blank=True, default=0, help_text='Automatically reclaim pending messages after X milliseconds', verbose_name='Reclaim pending messages (ms)'),
+        ),
+        migrations.AddField(
+            model_name='frontend',
+            name='redis_stream_startID',
+            field=models.TextField(choices=[('$', 'New entries'), ('-', 'All entries'), ('>', 'Undelivered entries')], default='$', help_text='Redis stream start choice', verbose_name='Redis stream start choice'),
+        ),
+        migrations.AlterField(
+            model_name='frontend',
+            name='redis_mode',
+            field=models.TextField(choices=[('queue', 'Queue mode, using push/pop'), ('subscribe', 'Channel mode, using pub/sub'), ('stream', 'Stream mode, using xread/xreadgroup')], default='queue', help_text="Redis comsumer mode - 'Queue' mode is recommended to avoid data loss", verbose_name='Redis consumer mode'),
+        ),
+    ]
