@@ -6,6 +6,8 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 
 ## Unreleased
+### Added
+- [FRONTEND] Redis stream support for input log
 ### Fixed
 - [FRONTEND] Allow skipping unresponsive nodes during HAProxy test_conf
 
